--- a/faq.html
+++ b/faq.html
@@ -23,10 +23,10 @@
     <div class="menu-overlay modal fade" id="menuModal" tabindex="-1" aria-labelledby="menuLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content d-flex flex-column align-items-center justify-content-center">
-                <a href="index.html" class="text-decoration-none fs-2 fw-bold text-light router-link-active">Terms Of Use</a>
-                <a href="contact.html" class="text-decoration-none fs-2 fw-bold text-light">Contact</a>
-                <a href="privacy.html" class="text-decoration-none fs-2 fw-bold text-light">Privacy Policy</a>
-                <a href="faq.html" class="text-decoration-none fs-2 fw-bold text-light">Frequent Questions</a>
+                <a href="index.html" class="text-decoration-none fs-2 fw-bold text-light router-link-active">Οροι χρήσης</a>
+                <a href="contact.html" class="text-decoration-none fs-2 fw-bold text-light">Επικοινωνία</a>
+                <a href="privacy.html" class="text-decoration-none fs-2 fw-bold text-light">Πολιτική απορρήτου</a>
+                <a href="faq.html" class="text-decoration-none fs-2 fw-bold text-light">Συχνές ερωτήσεις</a>
             </div>
             <div class="close-icon" data-bs-dismiss="modal">
                 <img src="assets/icon/close.svg" alt="close">
@@ -58,10 +58,10 @@
     </div>
     <footer class="container mt-5">
         <ul class="nav justify-content-between">
-            <li class="nav-item"><a class="nav-link px-0 small" href="index.html">TERMS OF USE</a></li>
-            <li class="nav-item"><a class="nav-link px-0 small" href="contact.html">CONTACT</a></li>
-            <li class="nav-item"><a class="nav-link px-0 small" href="privacy.html">PRIVACY POLICY</a></li>
-            <li class="nav-item"><a class="nav-link px-0 small text-light" href="faq.html">FREQUENT QUESTIONS</a></li>
+            <li class="nav-item"><a class="nav-link px-0 small" href="index.html">Οροι χρήσης</a></li>
+            <li class="nav-item"><a class="nav-link px-0 small" href="contact.html">Επικοινωνία</a></li>
+            <li class="nav-item"><a class="nav-link px-0 small" href="privacy.html">Πολιτική απορρήτου</a></li>
+            <li class="nav-item"><a class="nav-link px-0 small text-light" href="faq.html">Συχνές ερωτήσεις</a></li>
         </ul>
     </footer>
     <script src="js/bootstrap.bundle.min.js"></script>
