--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,10 @@
     <div class="menu-overlay modal fade" id="menuModal" tabindex="-1" aria-labelledby="menuLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content d-flex flex-column align-items-center justify-content-center">
-                <a href="index.html" class="text-decoration-none fs-2 fw-bold text-light router-link-active">Terms Of Use</a>
-                <a href="contact.html" class="text-decoration-none fs-2 fw-bold text-light">Contact</a>
-                <a href="privacy.html" class="text-decoration-none fs-2 fw-bold text-light">Privacy Policy</a>
-                <a href="faq.html" class="text-decoration-none fs-2 fw-bold text-light">Frequent Questions</a>
+                <a href="index.html" class="text-decoration-none fs-2 fw-bold text-light router-link-active">Οροι χρήσης</a>
+                <a href="contact.html" class="text-decoration-none fs-2 fw-bold text-light">Επικοινωνία</a>
+                <a href="privacy.html" class="text-decoration-none fs-2 fw-bold text-light">Πολιτική απορρήτου</a>
+                <a href="faq.html" class="text-decoration-none fs-2 fw-bold text-light">Συχνές ερωτήσεις</a>
             </div>
             <div class="close-icon" data-bs-dismiss="modal">
                 <img src="assets/icon/close.svg" alt="close">
@@ -35,29 +35,22 @@
     </div>
     <div class="container flex-grow-1">
         <h1 class="text-light fs-5">
-            Contact us
+            Επικοινωνήστε μαζί μας
         </h1>
         <span class="small">
-            <p>
-                When you subscribe to this experience and receive a free message which is sent to your mobile phone and contains all the information of the services, you acknowledge and agree that you will be a subscriber of the Mobibattle service. Charge with every sms download from xxxxx. The cost of the service is € xx.xx per month and the charge is made with 12 text messages from xxxx (€ x.xx per message). Some of the messages from 54422 may be replaced with up to 4 messages each from xxxxx (€ x.xx / SMS). In any case, the total cost of the service will not exceed € xx.xx per month. All prices include 24% VAT.
-            </p>
-            <p>You will receive chargeable messages with mobile internet content link. Internet connection may incur additional charges, for which you can consult your mobile service provider. </p>
-            <p>
-                If you want to stop this service, you can do so by sending a STOP message to xxxx. To join our service, you must be the owner of the device in use and be over the age of 18 or have the license of the person paying the bill. All displayed trademarks and logos are the property of their respective owners. </p>
-            <p>
-                Content / Advertising Promotion Provider: BlacknGreen AKSHAYA VIBGYOR 139/5, Unit A, 4TH FLOOR, KODAMBAKKAM HIGH ROAD, NUNGAMBAKKAM, CHENNAI Chennai TN 600034 IN
-            </p>
-            <p>
-                BlackNGreen is a telecommunications / technical provider and bears no responsibility for the service and its content. <a class="text-decoration-none" href="tel:xxx">xxxx</a> or <a class="text-decoration-none" href="mailto:mobileapps@blackngreen.com">mobileapps@blackngreen.com</a>
-            </p>
+            <p>Όταν εγγραφείτε σε αυτήν την εμπειρία και λάβετε ένα δωρεάν μήνυμα που έχει αποσταλεί στο κινητό σας τηλέφωνο και περιέχει όλες τις πληροφορίες των υπηρεσιών, αναγνωρίζετε και συμφωνείτε ότι θα είστε συνδρομητής της υπηρεσίας Mobibattle. Φορτίστε με κάθε λήψη sms από το xxxxx. Το κόστος της υπηρεσίας είναι xx.xx € ανά μήνα και η χρέωση γίνεται με 12 μηνύματα κειμένου από το xxxx (x.xx € ανά μήνυμα). Μερικά από τα μηνύματα από το 54422 μπορεί να αντικατασταθούν με έως και 4 μηνύματα το καθένα από το xxxxx (x.xx € / SMS). Σε κάθε περίπτωση, το συνολικό κόστος της υπηρεσίας δεν θα υπερβαίνει τα xx.xx € το μήνα. Όλες οι τιμές περιλαμβάνουν ΦΠΑ 24%.</p>
+            <p>Θα λάβετε μηνύματα φόρτισης με σύνδεσμο περιεχομένου διαδικτύου για κινητά. Η σύνδεση στο διαδίκτυο ενδέχεται να επιβαρύνεται με επιπλέον χρεώσεις, για τις οποίες μπορείτε να συμβουλευτείτε τον πάροχο υπηρεσιών κινητής τηλεφωνίας σας.</p>
+            <p>Εάν θέλετε να διακόψετε αυτήν την υπηρεσία, μπορείτε να το κάνετε στέλνοντας ένα μήνυμα STOP στο xxxx. Για να εγγραφείτε στην υπηρεσία μας, πρέπει να είστε ο κάτοχος της συσκευής που χρησιμοποιείται και να είστε άνω των 18 ετών ή να έχετε την άδεια του ατόμου που πληρώνει τον λογαριασμό. Όλα τα εμπορικά σήματα και τα λογότυπα που εμφανίζονται είναι ιδιοκτησία των αντίστοιχων κατόχων τους.</p>
+            <p>Πάροχος Προώθησης Περιεχομένου / Διαφημίσεων: BlacknGreen AKSHAYA VIBGYOR 139/5, Unit A, 4TH FLOOR, KODAMBAKKAM HIGH ROAD, NUNGAMBAKKAM, CHENNAI Chennai TN 600034 IN</p>
+            <p>Το BlackNGreen είναι τηλεπικοινωνιακός / τεχνικός πάροχος και δεν φέρει καμία ευθύνη για την υπηρεσία και το περιεχόμενό της. <a href="tel:+xxxx" class="text-decoration-none">xxxx</a> ή <a href="mailto:mobileapps@blackngreen.com" class="text-decoration-none">mobileapps@blackngreen.com</a></p>
         </span>
     </div>
     <footer class="container mt-5">
         <ul class="nav justify-content-between">
-            <li class="nav-item"><a class="nav-link px-0 small" href="index.html">TERMS OF USE</a></li>
-            <li class="nav-item"><a class="nav-link px-0 small text-light" href="contact.html">CONTACT</a></li>
-            <li class="nav-item"><a class="nav-link px-0 small" href="privacy.html">PRIVACY POLICY</a></li>
-            <li class="nav-item"><a class="nav-link px-0 small" href="faq.html">FREQUENT QUESTIONS</a></li>
+            <li class="nav-item"><a class="nav-link px-0 small" href="index.html">Οροι χρήσης</a></li>
+            <li class="nav-item"><a class="nav-link px-0 small text-light" href="contact.html">Επικοινωνία</a></li>
+            <li class="nav-item"><a class="nav-link px-0 small" href="privacy.html">Πολιτική απορρήτου</a></li>
+            <li class="nav-item"><a class="nav-link px-0 small" href="faq.html">Συχνές ερωτήσεις</a></li>
         </ul>
     </footer>
     <script src="js/bootstrap.bundle.min.js"></script>
