--- a/faq.html
+++ b/faq.html
@@ -43,8 +43,8 @@
             <p>Mobibattle provides entertaining mobile content for download, such as ringtones, games and more. After the correct registration and payment, you will be allowed the possibility of some downloads on compatible mobile phones and compatible devices through the Service.</p>
             <p>Mobibattle members receive credits each week, with which you can download different content, such as: funny sounds, games and more.</p>
             <p>
-                Shortcode: xxxx <br>
-                Mobibattle Club is a weekly subscription. You will receive three (3) charged messages, worth €xxx each, per week, total charge: € xxx per week. Final Message Price This service is available exclusively for people aged 18 and over. This Service is offered by BlacknGreen.
+                Shortcode: xxxx <br> 
+                Mobibattle Club is a weekly subscription. You will receive three (3) charged messages, worth €xxx each, per week, total charge: € 6.09 per week & €24.80 € / μήνα . Final Message Price This service is available exclusively for people aged 18 and over. This Service is offered by BlacknGreen.
             </p>
             <p>For all questions regarding your subscription, contact our customer service at xxxx. If you wish to unsubscribe from this service, send a message from your mobile with the word HERO STOP to the code where you were registered xxxx.</p>
             <p>The deletion message sent by the subscriber to the five-digit xxxx has the cost of a simple standard message that varies by mobile phone provider. The deletion confirmation information is sent to the subscriber FREE of charge from code xxxx.</p>
